--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 h2{
-    font-size: 24px;
+    font-size: 25px;
 }
 
 a {
@@ -147,12 +147,13 @@ form {
     align-items: center;
 }
             
-.button {
+.btn_desktop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 177px;
     height: 62px;
     border: 0;
-    padding: 0px 20px 0 20px;
-    text-align: center;
     color: #fff;   
     border-radius: 0px 20px 20px 0px;
     background-color: #0065FC;
@@ -160,57 +161,66 @@ form {
     font-weight: 700;
 }
             
-.button:hover {
+.btn_desktop:hover {
     background-color: #0065FC;
     color: white;
-    cursor: pointer;
-            
+    cursor: pointer;        
     box-shadow: inset -2px -2px 7px rgba(0, 0, 0, .3),
                 inset 2px 2px 7px rgba(255, 255, 255, .3);
 }
             
-.button:active {        
+.btn_desktop:active {        
     box-shadow: inset 1px 1px 10px rgba(0, 0, 0, .3),
                 inset -1px -1px 5px rgba(255, 255, 255, .2);
 }
 
+.btn_mobile {
+    display: none;
+
+}
             /*-------------------------------------*/
             /*--------------FILTRES----------------*/
             /*-------------------------------------*/
 .filters {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
     margin-top: 30px;
     margin-bottom: 24px;
+    max-width: 1180px;
 
+}
+
+.filters h2 {
+    display: flex;
+    margin-right: 15px;
 }
 
 .bodyfilter {
     display: flex;
+    margin-right: 5px;
     align-items: center;
     border: 3px solid #d6d6d6;
-    height: 60px;
-    border-radius: 60px;
-    margin-left: 39px;
+    height: 64px;
+    border-radius: 64px;
     transition: all 0.4s;
 }
 
 .bodyfilter:nth-child(2) {
-    width: 238px;
+    min-width: 234px;
 }
 
 .bodyfilter:nth-child(3) {
-    width: 188px;
+    min-width: 185px;
 }
 
 .bodyfilter:nth-child(4) {
-    width: 228px;
+    min-width: 226px;
 }
 
 .bodyfilter:nth-child(5) {
-    width: 298px;
+    min-width: 296px;
 }
 
 .bodyfilter:hover {
@@ -225,9 +235,9 @@ form {
     align-items: center;
     margin-left: -5px;
     border: 1px #DEEBFF;
-    height: 60px;
-    width: 60px;
-    border-radius: 50%;
+    height: 64px;
+    min-width: 64px;
+    border-radius: 64px;
     background-color: #DEEBFF;
 
 }
@@ -260,9 +270,9 @@ form {
     justify-content: center;
     align-items: center;
     border: 1.5px solid #d6d6d6;
-    height: 25px;
-    width: 25px;
-    border-radius: 30px;
+    height: 32px;
+    min-width: 32px;
+    border-radius: 32px;
     margin-right: 15px;
 }
 
@@ -587,13 +597,14 @@ footer {
     cursor: pointer;
 }
 
+/*____________________________________________________________MOBILE_________________________________________________________________________*/
+
 @media screen and (max-width: 768px) {
 
     * {
         box-sizing: border-box;
     }
-    
-    
+
     body {
         font-family: 'Raleway', sans-serif;
         padding: 0 0px 80px 0px;
@@ -601,7 +612,7 @@ footer {
     }
     
     h2{
-        font-size: 24px;
+        font-size: 25px;
     }
     
     a {
@@ -614,9 +625,9 @@ footer {
                 /*-------------------------------------*/
 
     .logo img {
-        width: 140px;
+        width: 138px;
         height:auto;
-        margin: 30px 30px -20px 30px;
+        margin: 25px 30px -28px 30px;
     }
     
     nav {
@@ -624,6 +635,11 @@ footer {
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
+    }
+
+    .sous_nav {
+        padding-left: 30px;
+        padding-right: 30px;
     }
     
     .menu {
@@ -633,6 +649,7 @@ footer {
         align-items: center;
         list-style: none;
         padding-left: 0;
+        margin-bottom: 20px;
         
     }
     
@@ -657,13 +674,142 @@ footer {
     }
 
     header h1 {
-        font-size: 28px;
+        font-size: 30px;
+        margin-bottom: 24px;
     }
     
     header h2 {
+        font-size: 22px;
         font-weight:400;
         margin-top: -10px;
     }
+
+            /*---------------------------------------*/
+            /*--------------searchbar----------------*/
+            /*---------------------------------------*/
+
+.searchbar { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 32px;
+    max-width: auto;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+            
+.localisation {
+    min-width: 70px;
+    height: 70px;
+    background-color: #F2F2F2;
+            
+    display: flex;
+    justify-content: center;
+    background-color: #F2F2F2;
+            
+    border-right: 0;
+    border-radius: 20px 0 0 20px;
+            
+}
+
+.localisation span {
+    font-size: 150%;
+}
+            
+.mapmarked {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+            
+.champ {
+    font-size: 24px;
+    font-weight: 700;
+    padding-left: 20px;
+    border-left: 1.5px solid #F2F2F2;
+    border-top: 1.5px solid #F2F2F2;
+    border-bottom: 1.5px solid #F2F2F2;
+    border-right: 0;
+    width: 314px;
+    height: 70px;
+}
+
+::placeholder {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.right p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+         
+.btn_mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    margin-left: -16px;
+    border: 0;
+    color: #fff;   
+    border-radius: 20px 20px 20px 20px;
+    background-color: #0065FC;
+    font-size: 22px;
+    font-weight: 700;
+}
+            
+.btn_mobile:hover {
+    background-color: #0065FC;
+    color: white;
+    cursor: pointer;
+            
+    box-shadow: inset -2px -2px 7px rgba(0, 0, 0, .3),
+                inset 2px 2px 7px rgba(255, 255, 255, .3);
+}
+            
+.btn_mobile:active {        
+    box-shadow: inset 1px 1px 10px rgba(0, 0, 0, .3),
+                inset -1px -1px 5px rgba(255, 255, 255, .2);
+}
+
+.btn_desktop {
+    display: none;
+}
+
+.filters {
+    margin-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.filters h2 {
+    display: flex;
+    min-width: 100%;
+    margin-right: 39px;
+}
+
+.bodyfilter {
+    margin-bottom: 20px;
+}
+
+.info {
+    padding-left: 19px;
+    padding-right: 14px;
+}
 
 }
 
@@ -693,18 +839,22 @@ footer {
                 /*------------NAVIGATION---------------*/
                 /*-------------------------------------*/
 
-
+    .logo img {
+        width: 138px;
+        height:auto;
+        margin: 25px 30px -28px 30px;
+    }
+    
     nav {
         display: flex;
         justify-content: space-between;
         align-items: center;
         flex-direction: column;
     }
-    
-    .logo img {
-        width: 140px;
-        height:auto;
-        margin: 30px 30px -20px 30px;
+
+    .sous_nav {
+        padding-left: 30px;
+        padding-right: 30px;
     }
     
     .menu {
@@ -714,6 +864,7 @@ footer {
         align-items: center;
         list-style: none;
         padding-left: 0;
+        margin-bottom: 20px;
         
     }
     
@@ -737,14 +888,121 @@ footer {
         border-bottom: 4px solid #0065FC;
     }
 
-
     header h1 {
-        font-size: 28px;
+        font-size: 30px;
+        margin-bottom: 24px;
     }
     
     header h2 {
+        font-size: 22px;
         font-weight:400;
         margin-top: -10px;
     }
+
+            /*---------------------------------------*/
+            /*--------------searchbar----------------*/
+            /*---------------------------------------*/
+
+.searchbar { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 32px;
+    max-width: auto;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+
+}
+            
+.localisation {
+    min-width: 70px;
+    height: 70px;
+    background-color: #F2F2F2;
+            
+    display: flex;
+    justify-content: center;
+    background-color: #F2F2F2;
+            
+    border-right: 0;
+    border-radius: 20px 0 0 20px;
+            
+}
+
+.localisation span {
+    font-size: 150%;
+}
+            
+.mapmarked {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+            
+.champ {
+    font-size: 24px;
+    font-weight: 700;
+    padding-left: 20px;
+    border-left: 1.5px solid #F2F2F2;
+    border-top: 1.5px solid #F2F2F2;
+    border-bottom: 1.5px solid #F2F2F2;
+    border-right: 0;
+    width: 314px;
+    height: 70px;
+}
+
+::placeholder {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.right p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+         
+.btn_mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 70px;
+    margin-left: -16px;
+    border: 0;
+    color: #fff;   
+    border-radius: 20px 20px 20px 20px;
+    background-color: #0065FC;
+    font-size: 22px;
+    font-weight: 700;
+}
+            
+.btn_mobile:hover {
+    background-color: #0065FC;
+    color: white;
+    cursor: pointer;
+            
+    box-shadow: inset -2px -2px 7px rgba(0, 0, 0, .3),
+                inset 2px 2px 7px rgba(255, 255, 255, .3);
+}
+            
+.btn_mobile:active {        
+    box-shadow: inset 1px 1px 10px rgba(0, 0, 0, .3),
+                inset -1px -1px 5px rgba(255, 255, 255, .2);
+}
+
+.btn_desktop {
+    display: none;
+}
 
 }
