--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,7 @@ input {
     align-items: flex-start;
     flex-direction: row;
     max-width: 100%;
+    gap: 20px;
     margin: auto;
     margin-left: -13px;
 
@@ -288,7 +289,7 @@ input {
     justify-content: space-between;
     align-items: flex-start;
     flex-direction: column;
-    width: 64.9%;
+    width: 65.4%;
     padding: 10px;
     border-radius: 30px;
     background-color: #F2F2F2;
@@ -382,11 +383,11 @@ input {
     justify-content: space-between;
     align-items: flex-start;
     flex-direction: column;
-    width: 31%;
+    width: 31.6%;
+    min-width: 420px;
     padding: 10px;
     border-radius: 30px;
     background-color: #F2F2F2;
-
 }
 
 .h2_pop {
@@ -485,8 +486,9 @@ input {
 .megabox_all_activities {
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
     width: 100%;
+    gap: 0 44px;
     margin-bottom: 40px;
     margin-left: -13px;
 }
@@ -586,70 +588,6 @@ footer ul {
     padding-left: 0px;
     margin-left: 5%;
     cursor: pointer;
-}
-
-/*_____________________________________________| - D E S K T O P - > T A B L E T T E - |__________________________________________________*/
-
-@media screen and (min-width: 992px) and (max-width: 1488px) {
-
-    /*_______________| - HEBERGEMENTS-POPULAR - |______________*/
-    .hebergements {
-        align-items: center;
-        flex-flow: column wrap;
-    }
-
-    .mega_box_popular {
-        padding: 30px;
-        width: 100%;
-        margin-top: 30px;
-    }
-
-    .box_card_popular {
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-    .box_hebergement_popular {
-        max-width: 527px;
-    }
-
-    .legend_photo_popular {
-        padding-right: 60px;
-    }
-
-    .legend_photo_popular_2 {
-        padding-right: 10px;
-    }
-
-    .name_hebergement_popular {
-        margin-top: 11px;
-    }
-
-    /*_______________| - HEBERGEMENTS-REGULAR - |______________*/
-    .mega_box_regular {
-        width: 100%;
-        margin-right: 0;
-    }
-}
-
-@media screen and (min-width: 992px) and (max-width: 1754px) {
-
-    .megabox_all_activities {
-        justify-content: space-evenly;
-    }
-}
-
-@media screen and (min-width: 1340px) and (max-width: 1800px) {
-
-    .megabox_all_activities {
-        justify-content: space-evenly;
-    }
-
-    .column_activity:nth-child(4) {
-        justify-content: space-evenly;
-        flex-direction: row;
-        width: 100%;
-    }
 }
 
 /*________________________________________| - T A B L E T T E -|________________________________________________________________________*/
@@ -1085,6 +1023,11 @@ footer ul {
     }
 
     /*___| - HEBERGEMENT POPULAR - |______mobile________*/
+
+    .mega_box_popular {
+        min-width: 0;
+    }
+    
     .h2_pop {
         padding-right: 10px;
     }
@@ -1149,7 +1092,7 @@ footer ul {
     .link_regular {
         max-width: 400px;
         min-width: 270px;
-        margin: 20px;
+        margin: 10px 20px;
         height: 218px;
         border: 5px solid white;
         border-radius: 20px;
@@ -1162,7 +1105,7 @@ footer ul {
     }
 
     .afficher_plus {
-        margin-top: 10px;
+        margin-top: 30px;
         margin-left: 7%;
         font-size: 20px;
         width: 200px;
@@ -1213,19 +1156,4 @@ footer ul {
         padding-top: 0px;
         padding-bottom: 20px;
     }
-}
-
-@media screen and (max-width: 374px) {
-
-    .sous_nav {
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-    .sous_nav h1,
-    .sous_nav h2 {
-        padding-right: 20px;
-        padding-left: 20px;
-    }
-
 }
